fix(ci): add missing tokens for GitHub Actions test
* Added `GITHUB_TOKEN` and `NPM_TOKEN` to the test action step.
* Ensures proper authentication for accessing GitHub and NPM resources.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,8 @@ jobs:
         id: test-action
         uses: ./
         with:
-          milliseconds: 1000
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Print Output
         id: output
