feat(git): integrate changeset release plan functionality
* Added dependencies for `@changesets/apply-release-plan`, `@changesets/assemble-release-plan`, and `@changesets/config`.
* Enhanced `gitVersionAndPush` function to read changesets and apply the release plan.
* Improved logging for better visibility during the versioning process.

--- a/package.json
+++ b/package.json
@@ -47,9 +47,13 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.11.1",
+    "@changesets/apply-release-plan": "^7.0.12",
+    "@changesets/assemble-release-plan": "^6.0.9",
     "@changesets/cli": "^2.29.5",
+    "@changesets/config": "^3.1.1",
     "@conventional-commits/parser": "^0.4.1",
     "@manypkg/get-packages": "^3.1.0",
+    "add": "^2.0.6",
     "simple-git": "^3.28.0",
     "yaml": "^2.8.0"
   },
@@ -60,6 +64,7 @@
     "@github/local-action": "^3.2.1",
     "@pixpilot/dev-config": "^1.0.21",
     "@rollup/plugin-commonjs": "^28.0.3",
+    "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-typescript": "^12.1.3",
     "@types/node": "^24.0.4",
