--- a/package.json
+++ b/package.json
@@ -42,18 +42,14 @@
     "test:ui": "vitest --ui",
     "all": "npm run format:write && npm run lint && npm run typecheck && npm run test && npm run coverage && npm run package",
     "build": "rollup -c",
-    "prepare": "husky"
+    "prepare": "husky install"
   },
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.11.1",
-    "@changesets/apply-release-plan": "^7.0.12",
-    "@changesets/assemble-release-plan": "^6.0.9",
     "@changesets/cli": "^2.29.5",
-    "@changesets/config": "^3.1.1",
     "@conventional-commits/parser": "^0.4.1",
     "@manypkg/get-packages": "^3.1.0",
-    "add": "^2.0.6",
     "simple-git": "^3.28.0",
     "yaml": "^2.8.0"
   },
@@ -64,7 +60,6 @@
     "@github/local-action": "^3.2.1",
     "@pixpilot/dev-config": "^1.0.21",
     "@rollup/plugin-commonjs": "^28.0.3",
-    "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-typescript": "^12.1.3",
     "@types/node": "^24.0.4",
@@ -89,8 +84,5 @@
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "*"
-  },
-  "overrides": {
-    "@manypkg/get-packages": "^3.1.0"
   }
 }
