--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "@github/local-action": "^3.2.1",
     "@pixpilot/dev-config": "^1.0.21",
     "@rollup/plugin-commonjs": "^28.0.3",
-    "@rollup/plugin-inject": "^5.0.5",
     "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-replace": "^6.0.2",
     "@rollup/plugin-typescript": "^12.1.3",
     "@types/node": "^24.0.4",
     "@typescript-eslint/eslint-plugin": "^8.35.0",
