--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "@changesets/cli": "^2.29.5",
     "@conventional-commits/parser": "^0.4.1",
     "@manypkg/get-packages": "^3.1.0",
+    "conventional-commits-parser": "^6.2.0",
     "simple-git": "^3.28.0",
-    "@commitlint/parse": "^19.8.1",
     "yaml": "^2.8.0"
   },
   "devDependencies": {
@@ -63,6 +63,7 @@
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-replace": "^6.0.2",
     "@rollup/plugin-typescript": "^12.1.3",
+    "@types/conventional-commits-parser": "^5.0.1",
     "@types/node": "^24.0.4",
     "@typescript-eslint/eslint-plugin": "^8.35.0",
     "@typescript-eslint/parser": "^8.35.0",
