--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@changesets/cli": "^2.29.5",
     "@conventional-commits/parser": "^0.4.1",
     "@manypkg/get-packages": "^3.1.0",
+    "@octokit/rest": "^22.0.0",
     "conventional-commits-parser": "^6.2.0",
     "simple-git": "^3.28.0",
     "yaml": "^2.8.0"
