--- a/action.yml
+++ b/action.yml
@@ -27,6 +27,14 @@ inputs:
       - name: next
         prerelease: rc
         channel: next
+  CREATE_RELEASE:
+    description: Enable or disable GitHub release creation
+    required: false
+    default: 'true'
+  PUSH_TAGS:
+    description: Enable or disable pushing tags to GitHub
+    required: false
+    default: 'true'
 
 # Define your outputs here.
 outputs:
