--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "@actions/core": "^1.11.1",
     "@changesets/cli": "^2.29.5",
+    "@changesets/get-release-plan": "^4.0.13",
     "@conventional-commits/parser": "^0.4.1",
     "@manypkg/get-packages": "^3.1.0",
     "@octokit/rest": "^22.0.0",
