feat(changeset): implement automatic changeset creation for recent commits
- Added `createChangesetsForRecentCommits` function to process changes since the last commit and create changeset files for each package.
- Introduced `hasChangesetFiles` function to check for the existence of changeset markdown files.
- Updated `README.md` to include rationale for automating changesets and improved documentation.
- Removed obsolete files and functions related to cleanup of auto-generated changeset files.
- Enhanced tests to cover new functionality and ensure reliability.

--- a/action.yml
+++ b/action.yml
@@ -35,6 +35,10 @@ inputs:
     description: Enable or disable pushing tags to GitHub
     required: false
     default: 'true'
+  AUTO_CHANGESET:
+    description: Enable or disable automatic changeset generation and versioning
+    required: false
+    default: 'true'
 
 # Define your outputs here.
 outputs:
