feat(coverage): add coverage badge and update CI test script
* Introduced a new SVG coverage badge in `badges/coverage.svg`.
* Updated the `ci-test` script in `package.json` to include coverage reporting.
* Enhanced coverage configuration in `vitest.config.ts` with thresholds and reports directory.

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "preinstall": "npx only-allow npm",
     "bundle": "npm run format:write && npm run package",
-    "ci-test": "vitest run",
+    "ci-test": "vitest run && npm run coverage",
     "coverage": "npx make-coverage-badge --output-path ./badges/coverage.svg",
     "format:write": "npx prettier --write .",
     "format:check": "npx prettier --check .",
