feat(package-groups): implement package grouping configuration
- Introduced `PACKAGE_GROUPS` input to allow users to define custom package groups via a JSON string.
- Updated action inputs and related functions to handle package grouping logic.
- Refactored release creation process to support grouped releases based on the new configuration.
- Enhanced tests to validate the new package grouping functionality and error handling for invalid JSON.

--- a/action.yml
+++ b/action.yml
@@ -43,10 +43,10 @@ inputs:
     description: Enable grouping of releases by package names instead of individual releases
     required: false
     default: 'false'
-  GROUP_BY:
-    description: How to group packages for releases (prefix, directory)
+  PACKAGE_GROUPS:
+    description: JSON string mapping group names to arrays of package names
     required: false
-    default: 'prefix'
+    default: '{}'
 
 # Define your outputs here.
 outputs:
