--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,4 +1,4 @@
-name: 'CodeQL'
+name: 'CodeQL Analyser'
 
 permissions:
   security-events: write
@@ -25,22 +25,39 @@ on:
     - cron: '30 1 * * 0' # Every Sunday at 01:30 UTC
 
 jobs:
-  analyze:
-    uses: pixpilot/dev-config/.github/workflows/codeql-analysis.yml@main
-    with:
-      config-file: .github/codeql/codeql-config.yml
+  codeql-analysis:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          config-file: .github/codeql/codeql-config.yml
+
+      - name: Autobuild
+        uses: github/codeql-action/autobuild@v3
+
+      - name: Run CodeQL Scanner
+        uses: github/codeql-action/analyze@v3
 # -------------------------------------------------------------
-# Alternative: Reusable workflow for code scanning
+# Alternative: pixpilot/codeql-scanner@main
 # -------------------------------------------------------------
 # Use this ONLY if your repo is private and you do NOT have GitHub Enterprise.
 # The official CodeQL workflow (see above) is always preferred for security and
 # integration with GitHub Security UI.
 #
 # jobs:
-#   code-analysis:
-#     uses: pixpilot/dev-config/.github/workflows/codeql-issue-maker.yml@main
-#     with:
-#       language: 'javascript' # or your target language
-#     secrets:
-#       token: ${{ secrets.GITHUB_TOKEN }}
+#   analyze:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v4
+#
+#       - name: Run CodeQL Scanner
+#         uses: pixpilot/codeql-scanner@main
+#         with:
+#           token: ${{ secrets.GITHUB_TOKEN }}
+#           config-file: .github/codeql/codeql-config.yml
 
