fix(action): set `published` output in action
Added `core.setOutput('published', ...)` calls in `src/main.ts` to ensure the action correctly sets the `published` output based on execution results:
* Sets to `"true"` when packages are published.
* Sets to `"false"` in all other scenarios:
  - No NPM token provided
  - No changesets to process
  - No packages published
  - An error occurred

Comprehensive tests added in `tests/main.test.ts` to cover all scenarios.

--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "github-action-template",
-  "description": "GitHub Actions TypeScript Template",
+  "name": "changesets-autopilot",
+  "description": "GitHub Action for automating changesets releases",
   "version": "0.0.0",
   "author": "",
   "type": "module",
   "private": true,
-  "homepage": "https://github.com/pixpilot/github-action-template#readme",
+  "homepage": "https://github.com/pixpilot/changesets-autopilot#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pixpilot/github-action-template.git"
+    "url": "git+https://github.com/pixpilot/changesets-autopilot.git"
   },
   "bugs": {
-    "url": "https://github.com/pixpilot/github-action-template/issues"
+    "url": "https://github.com/pixpilot/changesets-autopilot/issues"
   },
   "keywords": [
     "actions",
-    "typescript"
+    "typescript",
+    "changesets"
   ],
   "exports": {
     ".": "./dist/index.js"
