fix(package): update author and homepage fields
* Set author to "m.doaie <m.doaie@hotmail.com>".
* Corrected homepage URL to remove the fragment identifier.
* Updated repository URL to use HTTPS format.

--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "changesets-autopilot",
   "description": "GitHub Action for automating changesets releases",
   "version": "0.0.0",
-  "author": "",
+  "author": "m.doaie <m.doaie@hotmail.com>",
   "type": "module",
   "private": true,
-  "homepage": "https://github.com/pixpilot/changesets-autopilot#readme",
+  "homepage": "https://github.com/pixpilot/changesets-autopilot",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pixpilot/changesets-autopilot.git"
+    "url": "https://github.com/pixpilot/changesets-autopilot.git"
   },
   "bugs": {
     "url": "https://github.com/pixpilot/changesets-autopilot/issues"
